--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
+
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/ingmiguel2/apizoologico-miguel/issues"
   },
-  "homepage": "https://github.com/ingmiguel2/apizoologico-miguel#readme"
+  "homepage": "https://github.com/ingmiguel2/apizoologico-miguel#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "nodems": "^1.0.1"
+  }
 }
